<resources>
    <string name="app_name">Karate Counter</string>
    <string name="score_font">sans-serif-light</string>
    <string name="btn_3">+ 3 points</string>
    <string name="btn_2">+ 2 points</string>
    <string name="btn_1">+ 1 point</string>
    <string name="btn_kicks">kicks</string>
    <string name="btn_fouls">fouls</string>
    <string name="btn_reset">reset</string>
    <string name="init_round">Round 1</string>
    <string name="init_score">0</string>
</resources>
